Fallback title update and deployment test message

--- a/couch/snippets/og-meta.html
+++ b/couch/snippets/og-meta.html
@@ -7,7 +7,7 @@
 	<cms:if 'page_title'>
 		<cms:get_custom_field 'page_title' masterpage='settings.php' />
 		<cms:else />
-		Your Local Garage | Watton
+		Your Local Garage
 	</cms:if>
 
 </title>
