--- a/couch/snippets/techman.html
+++ b/couch/snippets/techman.html
@@ -1,5 +1,5 @@
 <!-- TechMan Online Booking -->
-<span id="tm-ob" style="font-family: Raleway;"></span>
+<span id="tm-ob" ></span>
 <script type="text/javascript">
 var obUrl = "yourlocalgarage.wsptm.com";
 var obWidth = "100vw", obHeight = "100vh";
