Initial techman modal integration  and styling

--- a/couch/snippets/techman.html
+++ b/couch/snippets/techman.html
@@ -2,7 +2,7 @@
 <span id="tm-ob" ></span>
 <script type="text/javascript">
 var obUrl = "yourlocalgarage.wsptm.com";
-var obWidth = "100vw", obHeight = "100vh";
+var obWidth = "100%", obHeight = "100%";
 (function() {
 var b = document.createElement("script"); b.type = "text/javascript"; b.async = true;
 b.src = ("https:" == document.location.protocol ? "https://" : "http://") + obUrl + "/integrate.js";
