Couch Upgrade Version 2.2.1 (20201114)

--- a/couch/addons/mosaic/theme/fields/display_field_relation.html
+++ b/couch/addons/mosaic/theme/fields/display_field_relation.html
@@ -1,5 +1,5 @@
 <ul>
-<cms:related_pages orderby=orderby order=order_dir>
+<cms:related_pages orderby=orderby order=order_dir show_future_entries='1'>
     <li><cms:show k_page_title /></li>
 </cms:related_pages>
 </ul>
