--- a/couch/snippets/og-meta.html
+++ b/couch/snippets/og-meta.html
@@ -4,43 +4,43 @@
 
 <title>
 
-	<cms:if 'page_title'>
-		<cms:get_custom_field 'page_title' masterpage='settings.php' />
+	<cms:if page_title >
+		<cms:show page_title />
 		<cms:else />
-		Your Local Garage
+		Your Local Garage | Servicing and MOTs | Watton
 	</cms:if>
-
 </title>
 
-<cms:if 'seo_desc'>
-	<meta name="description" content="<cms:get_custom_field 'seo_desc' masterpage='settings.php' />">
+<cms:if seo_desc >
+	<meta name="description" content="<cms:show seo_desc />">
 </cms:if>
-<meta name="theme-color" content="#111111">
+
+<meta name="theme-color" content="#283453">
 
 <!-- Open Graph data -->
 
-<cms:if 'seo_title'>
-	<meta property="og:title" content="<cms:get_custom_field 'seo_title' masterpage='settings.php' />">
+<cms:if seo_title >
+	<meta property="og:title" content="<cms:show seo_title />">
 </cms:if>
 <meta property="og:url" content="<cms:show k_page_link />">
 <meta property="og:type" content="website">
-<cms:if 'seo_desc'>
-	<meta property="og:description" content="<cms:get_custom_field 'seo_desc' masterpage='settings.php' />">
+<cms:if seo_desc >
+	<meta property="og:description" content="<cms:show seo_desc />">
 </cms:if>
-<cms:if 'seo_img'>
-	<meta property="og:image" content="<cms:get_custom_field 'seo_img' masterpage='settings.php' />">
+<cms:if seo_img>
+	<meta property="og:image" content="<cms:show seo_img />">
 </cms:if>
 
 <!-- Twitter card data -->
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="<cms:show k_page_link />">
-<cms:if 'seo_title'>
-	<meta name="twitter:title" content="<cms:get_custom_field 'seo_title' masterpage='settings.php' />">
+<cms:if seo_title>
+	<meta name="twitter:title" content="<cms:show seo_title />">
 </cms:if>
-<cms:if 'seo_desc'>
-	<meta name="twitter:description" content="<cms:get_custom_field 'seo_desc' masterpage='settings.php' />">
+<cms:if seo_desc>
+	<meta name="twitter:description" content="<cms:show seo_desc />">
 </cms:if>
-<cms:if 'seo_img'>
-	<meta name="twitter:image" content="<cms:get_custom_field 'seo_img' masterpage='settings.php' />">
+<cms:if seo_img>
+	<meta name="twitter:image" content="<cms:show seo_img />">
 </cms:if>
