--- a/couch/snippets/techman.html
+++ b/couch/snippets/techman.html
@@ -10,3 +10,4 @@ var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(b,
 })();
 </script>
 
+<!-- Once confirmed by techman, look at if the admin field in settings.php is needed or if this can be removed. -->
