Contact details update

--- a/couch/snippets/footer.html
+++ b/couch/snippets/footer.html
@@ -12,7 +12,7 @@
 					<cms:get_field 'footer_info_title' masterpage='settings.php' />
 				</strong></span>
 			<span class="caption">
-				<cms:get_field 'footer_info' masterpage='settings.php' /><br><br> Tel: <a href="">01953 797272</a><br>Email: <a href="">help@yourlocalgarage.co.uk</a>
+				<cms:get_field 'footer_info' masterpage='settings.php' /><br><br> Tel: <a href="tel:01953797200">01953 797200</a><br>Email: <a href="mailto:bookings@yourlocalgarage.co.uk">bookings@yourlocalgarage.co.uk</a>
 			</span>
 		</div>
 
