JotForm Booking embed implimentation

--- a/couch/snippets/modal.html
+++ b/couch/snippets/modal.html
@@ -6,13 +6,12 @@
 
 		<div class="modal-controls">
 
-			<span onclick="goBack()" tabindex="0" class="caption label"><img src="static/images/arrow-backwards.svg" />Back</span>
-			<span class="kicker label">Online booking</span>
+			<span class="kicker label">Booking form</span>
 			<span onclick="document.getElementById('modal').style.display='none'" tabindex="0" id="close-button" class="caption label">Close<img src="static/images/close.svg" /></span>
 		</div>
 
-		<div class="techman-wrapper">
-			<cms:embed 'techman.html' />
+		<div class="booking-wrapper">
+			<cms:embed 'booking.html' />
 		</div>
 
 	</div>
