--- a/couch/snippets/modal.html
+++ b/couch/snippets/modal.html
@@ -7,7 +7,7 @@
 		<div class="modal-controls">
 
 			<span class="kicker label">Booking form</span>
-			<span onclick="document.getElementById('modal').style.display='none'" tabindex="0" id="close-button" class="caption label">Close<img src="static/images/close.svg" /></span>
+			<span onclick="document.getElementById('modal').style.display='none'" tabindex="0" id="close-button" class="caption label">Close<img src="static/images/close.svg" alt="" /></span>
 		</div>
 
 		<div class="booking-wrapper">
