--- a/couch/snippets/og-meta.html
+++ b/couch/snippets/og-meta.html
@@ -1,18 +1,20 @@
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
 
 <title>
 
 	<cms:if page_title >
 		<cms:show page_title />
-		<cms:else />
+	<cms:else />
 		Your Local Garage | Servicing and MOTs | Watton
 	</cms:if>
 </title>
 
 <cms:if seo_desc >
-	<meta name="description" content="<cms:show seo_desc />">
+		<meta name="description" content="<cms:show seo_desc />">
+	<cms:else />
+		<meta name="description" content="Your Local Garage at Fresh Motors — Providing MOTs, vehicle maintenance, repairs and diagnostic for all makes of vehicle.">
 </cms:if>
 
 <meta name="theme-color" content="#283453">
