--- a/couch/snippets/favicons.html
+++ b/couch/snippets/favicons.html
@@ -1,5 +1,7 @@
 <!-- Favicons -->
 <link rel="shortcut icon" href="/static/favicons/favicon.ico" type="image/x-icon">
+<link rel="mask-icon" href="/static/favicons/mask-icon.svg" color="#283453">
+
 <link rel="apple-touch-icon" sizes="57x57" href="/static/favicons/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/static/favicons/apple-touch-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/static/favicons/apple-touch-icon-72x72.png">
