Adding custom 404 page

--- a/couch/snippets/header.html
+++ b/couch/snippets/header.html
@@ -2,7 +2,7 @@
 
 	<nav class="wrapper">
 
-		<div class="col-3 align-left nav-logo"><a href="/"><img src="static/images/ylg-logo.svg" alt="Your Local Garage and Fresh Motors Logos" class="header-logo" />Your Local Garage at Fresh Motors</a></div>
+		<div class="col-3 align-left nav-logo"><a href="/"><img src="static/images/ylg-logo.svg" alt="Your Local Garage Logo" class="header-logo" />Your Local Garage at Fresh Motors</a></div>
 
 		<ul class="nav-menu col-9 align-right">
 
