Trademark text update and new page template

--- a/couch/snippets/footer.html
+++ b/couch/snippets/footer.html
@@ -4,7 +4,7 @@
 
 		<div class="col-3 align-left sec-footer-content">
 			<img src="static/images/joint-logo-full.svg" alt="Your Local Garage and Fresh Motors logos" />
-			<span class="caption opacity">Your Local Garage and FRESH MOTORS are ® registered trademarks of Fresh Motors Ltd</span>
+			<span class="caption opacity">Your Local Garage and Fresh Motors are ® registered trademarks of Fresh Motors Ltd</span>
 		</div>
 
 		<div class="col-3 align-right sec-footer-content tablet-hide">
