--- a/couch/snippets/header.html
+++ b/couch/snippets/header.html
@@ -2,9 +2,11 @@
 
 	<nav class="wrapper">
 
-		<div class="col-3 align-left nav-logo"><a href="/"><img src="static/images/ylg-logo.svg" alt="Your Local Garage Logo" class="header-logo" />Your Local Garage at Fresh Motors</a></div>
+		<div class="col-4 align-left nav-logo"><a href="/"><img src="static/images/ylg-logo-long.svg" alt="Your Local Garage Logo" class="header-logo" />Your Local Garage at Fresh Motors</a></div>
 
-		<ul class="nav-menu col-9 align-right">
+		<ul class="nav-menu col-8 align-right">
+
+			<li class="button-link nav-link mobile-home"><a href="/">Home</a></li>
 
 			<cms:get_field 'nav_links' masterpage='settings.php'>
 
