--- a/couch/snippets/footer.html
+++ b/couch/snippets/footer.html
@@ -103,7 +103,7 @@
 
 		</div>
 
-		<div class="align-right mobile-hide portfolio-link-text"><a href="https://www.danburnage.com" target="_blank" rel="noopener"><img class="portfolio-link" alt="" src="/static/images/smile-logo.svg" />Website by Dan Burnage</a></div>
+		<div class="align-right mobile-hide portfolio-link-text"><a href="https://www.danburnage.com" target="_blank" rel="noopener"><img class="portfolio-link" alt="Website by Dan Burnage" src="/static/images/smile-logo.svg" /></a></div>
 
 	</div>
 
