--- a/couch/snippets/header.html
+++ b/couch/snippets/header.html
@@ -2,7 +2,7 @@
 
 	<nav class="wrapper">
 
-		<div class="col-4 align-left nav-logo"><a href="/"><img src="static/images/ylg-logo-long.svg" alt="Your Local Garage Logo" class="header-logo" />Your Local Garage at Fresh Motors</a></div>
+		<div class="col-4 align-left nav-logo"><a href="/"><img src="static/images/ylg-logo-long.svg" alt="Your Local Garage at Fresh Motors" class="header-logo" /></a></div>
 
 		<ul class="nav-menu col-8 align-right">
 
