Discernible footer links fix

--- a/couch/snippets/footer.html
+++ b/couch/snippets/footer.html
@@ -90,15 +90,15 @@
 			</cms:get_field>
 
 			<cms:if g_facebook_link>
-				<span class="caption"> &nbsp; |</span> <a href="<cms:get_field 'facebook_link' masterpage='settings.php' />" target="_blank" rel="noopener"><img class="social-icons" src="/static/images/facebook.svg" alt="" /></a>
+				<span class="caption"> &nbsp; |</span> <a href="<cms:get_field 'facebook_link' masterpage='settings.php' />" target="_blank" rel="noopener"><img class="social-icons" src="/static/images/facebook.svg" alt="Facebook" /></a>
 			</cms:if>
 
 			<cms:if g_instagram_link>
-				<a href="<cms:get_field 'instagram_link' masterpage='settings.php' />" target="_blank" rel="noopener"><img class="social-icons" alt="" src="/static/images/instagram.svg" /></a>
+				<a href="<cms:get_field 'instagram_link' masterpage='settings.php' />" target="_blank" rel="noopener"><img class="social-icons" alt="Instagram" src="/static/images/instagram.svg" /></a>
 			</cms:if>
 
 			<cms:if g_twitter_link>
-				<a href="<cms:get_field 'twitter_link' masterpage='settings.php' />" target="_blank" rel="noopener"><img class="social-icons" alt="" src="/static/images/twitter.svg" /></a>
+				<a href="<cms:get_field 'twitter_link' masterpage='settings.php' />" target="_blank" rel="noopener"><img class="social-icons" alt="Twitter" src="/static/images/twitter.svg" /></a>
 			</cms:if>
 
 		</div>
