GA tracking classes added

--- a/couch/snippets/footer.html
+++ b/couch/snippets/footer.html
@@ -90,7 +90,7 @@
 			</cms:get_field>
 
 			<cms:if g_facebook_link>
-				<span class="caption"> &nbsp; |</span> <a href="<cms:get_field 'facebook_link' masterpage='settings.php' />" target="_blank" rel="noopener"><img class="social-icons" src="/static/images/facebook.svg" alt="Facebook" /></a>
+				<span class="caption"> &nbsp; |</span> <a href="<cms:get_field 'facebook_link' masterpage='settings.php' />" target="_blank" rel="noopener"><img class="social-icons" alt="Facebook" src="/static/images/facebook.svg" /></a>
 			</cms:if>
 
 			<cms:if g_instagram_link>
